# Homework_1_techno-park

./: .gitignore  README.md  cov.html
.github/workflows/: github-actions-demo.yml
Homework_1/: CMakeLists.txt  get_data_by_user.c  get_data_by_user.h  main.c  split_logic.c  split_logic.h  test_split_logic.cpp  waybill_structure.h
